# socketcan-cpp

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  SocketCanConfig.cmake
include/socketcan/: socketcan.h
src/: socketcan.cpp
tests/: CMakeLists.txt  receive.cpp  test_socketcan.cpp  transmit.cpp
